--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -417,7 +417,10 @@ h6 {
   margin-bottom: 50px;
   font-size: 24px;
 }
-
+#hero p {
+  color: rgba(255, 255, 255, 0.6);  
+  font-size: 20px;
+}
 #hero .btn-get-started {
   font-family: "Jost", sans-serif;
   font-weight: 500;
