--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,8 @@ h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #37517e;
+  /* background: #37517e; */
+  background-color: #062965;
 }
 
 #preloader:before {
