new FAQs and sponsers added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1987,3 +1987,24 @@ section {
   background: #062b69;
   color: #fff;
 }
+
+@media (max-width: 992px) {
+  .popup {
+    max-width: 60%;
+    margin: 0 auto 30px auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .popup  {
+    max-width: 80%;
+    margin: 0 auto 30px auto;
+  }
+}
+
+@media (max-width: 420px) {
+  .popup  {
+    max-width: 100%;
+    margin: 0 auto 30px auto;
+  }
+}
