--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2008,3 +2008,46 @@ section {
     margin: 0 auto 30px auto;
   }
 }
+
+.regbtn{
+  width: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 6px 0;
+  display: inline-block;
+  border-radius: 50px;
+  color: #ffffff;
+  transition: none;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Jost", sans-serif;
+  transition: 0.3s;
+  border: 1px solid #ffffff;
+  align-items: center;
+}
+
+.regbtn:hover{
+  background-color: #fff;
+  color: #062b69;
+}
+
+.regbtn2{
+  width: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  padding: 12px 35px;
+  border-radius: 50px;
+  color: #062b69;
+  transition: none;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Jost", sans-serif;
+  transition: 0.3s;
+  border: 1px solid #062b69;
+}
+
+.regbtn2:hover{
+  background-color: #062b69;
+  color: #FFF;
+}
