--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2013,17 +2013,17 @@ section {
   width: 50%;
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 6px 0;
+  padding: 10px 0;
   display: inline-block;
   border-radius: 50px;
-  color: #ffffff;
+  color: #FFF;
   transition: none;
   font-size: 16px;
   font-weight: 500;
   font-family: "Jost", sans-serif;
   transition: 0.3s;
-  border: 1px solid #ffffff;
-  align-items: center;
+  border: 1px solid #FFF;
+  background: #062b69;
 }
 
 .regbtn:hover{
@@ -2039,6 +2039,7 @@ section {
   padding: 12px 35px;
   border-radius: 50px;
   color: #062b69;
+  background-color: #fff;
   transition: none;
   font-size: 16px;
   font-weight: 500;
