--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2051,3 +2051,24 @@ section {
   background-color: #062b69;
   color: #FFF;
 }
+
+.queriesbtn{
+  width: 25%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+  padding: 12px 35px;
+  border-radius: 50px;
+  color: #062b69;
+  transition: none;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Jost", sans-serif;
+  transition: 0.3s;
+  border: 1px solid #062b69;
+}
+
+.queriesbtn:hover{
+  background-color: #062b69;
+  color: #FFF;
+}
